# OpenGL_Test

./: CMakeLists.txt  README.md  main.cpp  output.txt  types.h
algorithm/: algorithm.cpp  algorithm.h  helper_functions.cpp  helper_functions.h
config/: config.cfg  parser.cpp  parser.h
cube_logic/: block.cpp  block.h  cube.cpp  cube.h  lay_manager.cpp  lay_manager.h
input/: input_class.cpp  input_class.h
visual/: camera.cpp  camera.h  player.cpp  player.h  visualizer.cpp  visualizer.h
